--- a/Draw/Controller/SelectWord/SelectWordController.xib
+++ b/Draw/Controller/SelectWord/SelectWordController.xib
@@ -122,11 +122,11 @@
 						<string key="NSFrame">{{41, 329}, {120, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUITitleShadowOffset">{0, 1}</string>
 						<string key="IBUINormalTitle">换一组词语</string>
 						<object class="NSColor" key="IBUIHighlightedTitleColor" id="339280707">
 							<int key="NSColorSpace">3</int>
@@ -135,15 +135,15 @@
 						<reference key="IBUINormalTitleColor" ref="339280707"/>
 						<object class="NSColor" key="IBUINormalTitleShadowColor">
 							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC41AA</bytes>
+							<bytes key="NSWhite">MAA</bytes>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">2</int>
-							<double key="pointSize">20</double>
+							<double key="pointSize">16</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica-Bold</string>
-							<double key="NSSize">20</double>
+							<double key="NSSize">16</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -390,8 +390,16 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
-					<string key="className">SelectWordController</string>
+					<string key="className">PPViewController</string>
 					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SelectWordController</string>
+					<string key="superclassName">PPViewController</string>
 					<object class="NSMutableDictionary" key="actions">
 						<string key="NS.key.0">clickChangeWordButton:</string>
 						<string key="NS.object.0">id</string>
@@ -407,7 +415,6 @@
 						<string key="changeWordButton">UIButton</string>
 						<string key="clockLabel">UILabel</string>
 						<string key="titleLabel">UILabel</string>
-						<string key="toolNumberButton">UIButton</string>
 						<string key="wordTableView">UITableView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -422,10 +429,6 @@
 						<object class="IBToOneOutletInfo" key="titleLabel">
 							<string key="name">titleLabel</string>
 							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="toolNumberButton">
-							<string key="name">toolNumberButton</string>
-							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="wordTableView">
 							<string key="name">wordTableView</string>
